[CSS Shapes] rectangle and inset-rectangle do not properly handle rx and ry https://bugs.webkit.org/show_bug.cgi?id=116745

Patch by Bem Jones-Bey <bjonesbe@adobe.com> on 2013-06-12
Reviewed by Dirk Schulze.

Source/WebCore:

If ry is not supplied, it now defaults to the rx value. Also, if rx
and ry are not supplied, they default to 0px. This also has the effect
that the computed style for any rectangle or inset-rectangle now
contains all six parameters.

If rx > width/2 then it is clamped to width/2, and if ry > height/2,
then it is clamped to height/2. This happens at layout time because
given mixed units and relative units, that is the only time this
determination can be made.

Tests: fast/exclusions/shape-inside/shape-inside-rounded-rectangle-large-radius.html
       fast/exclusions/shape-outside-floats/shape-outside-floats-rounded-rectangle-large-radius.html

* css/BasicShapeFunctions.cpp:
(WebCore::valueForBasicShape): Remove checks for undefined, since rx
    and ry cannot be undefined in BasicShapes anymore.
(WebCore::basicShapeForValue): If radii are undefined in CSS, set
    default values in the BasicShape, per the spec.
* rendering/ExclusionShape.cpp:
(WebCore::ensureRadiiDoNotOverlap): Utility method to ensure radii
    don't overlap.
(WebCore::ExclusionShape::createExclusionShape): Remove defaulting to
    zero, clamp radii per the spec.
* rendering/style/BasicShapes.cpp:
(WebCore::BasicShapeRectangle::path): Remove defaulting.
(WebCore::BasicShapeRectangle::blend): Ditto.
(WebCore::BasicShapeInsetRectangle::path): Ditto.
(WebCore::BasicShapeInsetRectangle::blend): Ditto.
* rendering/style/BasicShapes.h:
(WebCore::BasicShapeRectangle::BasicShapeRectangle): Remove defaulting
    to undefined for radii.
(WebCore::BasicShapeRectangle::setCornerRadiusX): Add assert to
    prevent undefined.
       (WebCore::BasicShapeRectangle::setCornerRadiusY): Add assert to
    prevent undefined.
(WebCore::BasicShapeInsetRectangle::BasicShapeInsetRectangle): Ditto.
(WebCore::BasicShapeInsetRectangle::setCornerRadiusX): Add assert to
    prevent undefined.
       (WebCore::BasicShapeInsetRectangle::setCornerRadiusY): Add assert to
    prevent undefined.

LayoutTests:

Update tests to check for the rx and ry conditions.

* fast/exclusions/parsing/parsing-shape-inside-expected.txt: New results.
* fast/exclusions/parsing/parsing-shape-outside-expected.txt: New results.
* fast/exclusions/parsing/script-tests/parsing-shape-inside.js: Update
    to reflect that the computed value now always has rx and ry.
* fast/exclusions/parsing/script-tests/parsing-shape-outside.js: Ditto.
* fast/exclusions/parsing/script-tests/parsing-test-utils.js: Ditto.
* fast/exclusions/resources/rounded-rectangle.js:
(genLeftRightRoundedRectFloatShapeOutsideRefTest): Factor out left and
    right into separate methods so that they can be used in tests that
    only have left floats or only right floats.
(genLeftRoundedRectFloatShapeOutsideRefTest): Ditto.
(genRightRoundedRectFloatShapeOutsideRefTest): Ditto.
* fast/exclusions/shape-inside/shape-inside-animation-expected.txt: New results.
* fast/exclusions/shape-inside/shape-inside-animation.html: Change to
    reflect new computed style value.
* fast/exclusions/shape-inside/shape-inside-rounded-rectangle-large-radius-expected.html: Added.
* fast/exclusions/shape-inside/shape-inside-rounded-rectangle-large-radius.html: Added.
* fast/exclusions/shape-outside-floats/shape-outside-floats-rounded-rectangle-large-radius-expected.html: Added.
* fast/exclusions/shape-outside-floats/shape-outside-floats-rounded-rectangle-large-radius.html: Added.
    Note that the expected test here uses shape-inside, because we
    really are just testing that the behavior is the same as a
    shape-inside with rx and ry set to 50%, and it turned out to be
    very hard to construct an expected result that didn't use
    shape-inside and wasn't off by a pixel.
* css3/masking/clip-path-animation.html: Update expected value.
* css3/masking/clip-path-animation-expected.txt: New results.

Canonical link: https://commits.webkit.org/135723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151517 268f45cc-cd09-0410-ab3c-d52691b4dbfc