Source/WebCore/rendering/style/BasicShapes.cpp
@@ -62,8 +62,8 @@ void BasicShapeRectangle::path(Path& path, const FloatRect& boundingBox)
             floatValueForLength(m_height, boundingBox.height())
         ),
         FloatSize(
-            m_cornerRadiusX.isUndefined() ? 0 : floatValueForLength(m_cornerRadiusX, boundingBox.width()),
-            m_cornerRadiusY.isUndefined() ? 0 : floatValueForLength(m_cornerRadiusY, boundingBox.height())
+            floatValueForLength(m_cornerRadiusX, boundingBox.width()),
+            floatValueForLength(m_cornerRadiusY, boundingBox.height())
         )
     );
 }
@@ -78,10 +78,8 @@ PassRefPtr<BasicShape> BasicShapeRectangle::blend(const BasicShape* other, doubl
     result->setY(m_y.blend(o->y(), progress));
     result->setWidth(m_width.blend(o->width(), progress));
     result->setHeight(m_height.blend(o->height(), progress));
-    if (!m_cornerRadiusX.isUndefined() && !o->cornerRadiusX().isUndefined())
-        result->setCornerRadiusX(m_cornerRadiusX.blend(o->cornerRadiusX(), progress));
-    if (!m_cornerRadiusY.isUndefined() && !o->cornerRadiusY().isUndefined())
-        result->setCornerRadiusY(m_cornerRadiusY.blend(o->cornerRadiusY(), progress));
+    result->setCornerRadiusX(m_cornerRadiusX.blend(o->cornerRadiusX(), progress));
+    result->setCornerRadiusY(m_cornerRadiusY.blend(o->cornerRadiusY(), progress));
     return result.release();
 }
 
@@ -194,8 +192,8 @@ void BasicShapeInsetRectangle::path(Path& path, const FloatRect& boundingBox)
             std::max<float>(boundingBox.height() - top - floatValueForLength(m_bottom, boundingBox.height()), 0)
         ),
         FloatSize(
-            m_cornerRadiusX.isUndefined() ? 0 : floatValueForLength(m_cornerRadiusX, boundingBox.width()),
-            m_cornerRadiusY.isUndefined() ? 0 : floatValueForLength(m_cornerRadiusY, boundingBox.height())
+            floatValueForLength(m_cornerRadiusX, boundingBox.width()),
+            floatValueForLength(m_cornerRadiusY, boundingBox.height())
         )
     );
 }
@@ -210,10 +208,8 @@ PassRefPtr<BasicShape> BasicShapeInsetRectangle::blend(const BasicShape* other, 
     result->setRight(m_right.blend(o->right(), progress));
     result->setBottom(m_bottom.blend(o->bottom(), progress));
     result->setLeft(m_left.blend(o->left(), progress));
-    if (!m_cornerRadiusX.isUndefined() && !o->cornerRadiusX().isUndefined())
-        result->setCornerRadiusX(m_cornerRadiusX.blend(o->cornerRadiusX(), progress));
-    if (!m_cornerRadiusY.isUndefined() && !o->cornerRadiusY().isUndefined())
-        result->setCornerRadiusY(m_cornerRadiusY.blend(o->cornerRadiusY(), progress));
+    result->setCornerRadiusX(m_cornerRadiusX.blend(o->cornerRadiusX(), progress));
+    result->setCornerRadiusY(m_cornerRadiusY.blend(o->cornerRadiusY(), progress));
     return result.release();
 }
 }
